--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 
     <section class="card" id="card-1">
       <h2>Basic</h2>
-      <p class="monthly cost">&dollar;19.99</p>
-      <p class="annually cost">&dollar;199.99</p>
+      <p class="monthly cost">19.99</p>
+      <p class="annually cost">199.99</p>
       <p>500 GB Storage</p>
       <p>2 Users Allowed</p>
       <p>Send up to 3 GB</p>
@@ -39,18 +39,18 @@
 
     <section class="card" id="card-2">
       <h2>Professional</h2>
-      <p class="monthly cost">&dollar;24.99</p>
-      <p class="annually cost">&dollar;249.99</p>
+      <p class="monthly cost">24.99</p>
+      <p class="annually cost">249.99</p>
       <p>1 TB Storage</p>
       <p>5 Users Allowed</p>
       <p>Send up to 10 GB</p>
-      <button type="button">Learn More</button>
+      <button type="button" class="button-2">Learn More</button>
     </section>
 
     <section class="card" id="card-3">
       <h2>Master</h2>
-      <p>&dollar;39.99</p>
-      <p>&dollar;399.99</p>
+      <p class="monthly cost">39.99</p>
+      <p class="annually cost">399.99</p>
       <p>2 TB Storage</p>
       <p>10 Users Allowed</p>
       <p>Send up to 20 GB</p>
@@ -62,7 +62,7 @@
   <footer>
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="https://lauraho.net">Laura Ho</a>.
     </div>
   </footer>
 
