--- a/index.html
+++ b/index.html
@@ -19,8 +19,11 @@
   <header>
     <h1>Our Pricing</h1>
     <div class="switch">
-      <p>Annually</p> 
-      <input type="checkbox" id="checkbox" name="checkbox">
+      <p>Annually</p>
+      <label class="toggle">
+        <input type="checkbox" id="checkbox" name="checkbox">
+        <span class="slider round"></span>
+      </label> 
       <p>Monthly</p>
     </div>
   </header>
