--- a/index.html
+++ b/index.html
@@ -20,10 +20,12 @@
     <h1>Our Pricing</h1>
     <div class="switch">
       <p>Annually</p>
-      <label class="toggle">
-        <input type="checkbox" id="checkbox" name="checkbox">
-        <span class="slider round"></span>
-      </label> 
+
+          <label class="toggle" for="checkbox">
+            <input type="checkbox" id="checkbox" name="checkbox">
+            <span class="slider round"></span>
+          </label> 
+
       <p>Monthly</p>
     </div>
   </header>
