monthly shown as default

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <p>Annually</p>
 
           <label class="toggle" for="checkbox">
-            <input type="checkbox" id="checkbox" name="checkbox">
+            <input type="checkbox" id="checkbox" name="checkbox" checked>
             <span class="slider round"></span>
           </label> 
 
